# GitHub-Repo-Metadata-Manager-

./: .gitignore  README.md  missing_fields.csv  missing_fields.xlsx  pyproject.toml  repos.csv  repos.xlsx  response.md  run.sh  x.py
src/: gemini_text_fetcher.py  github_repo_manager.py
